# 2DIsingModel

./: .gitignore  CMakeLists.txt  README.md
GUI/: CMakeLists.txt  latticeModel.cpp  latticeModel.hpp  main.cpp  simulator.cpp  simulator.hpp
GUI/qml/: ControlBoard.qml  InteractableGrid.qml  InteractableSimulator.qml  Pilot.qml  resource.qrc
Lattice/: CMakeLists.txt
